--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,18 @@ sonarqube {
         property "sonar.host.url", "https://sonarcloud.io"
     }
 }
+jacoco {
+    toolVersion = "0.8.8"
+    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = true
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
+}
 
 eclipse {
     classpath {
