--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,14 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.sonarqube" version "4.4.1.3373"
+}
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'org.sonarqube'
 apply plugin: 'jacoco'
 
 
@@ -35,9 +37,11 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation 'joda-time:joda-time:2.3'
 
+
+dependencies {
+
+    implementation 'joda-time:joda-time:2.3'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
     implementation("javax.servlet:javax.servlet-api:4.0.1")
@@ -67,7 +71,7 @@ sonarqube {
     }
 }
 jacoco {
-    toolVersion = "0.8.8"
+    toolVersion = "0.8.11"
     reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
 
