--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        spring_version = "6.1.0"
-        springboot_version = "3.2.0"
+        spring_version = "6.1.5"
+        springboot_version = "3.2.4"
         spring_dependency_management_version = "1.0.11.RELEASE"
     }
     repositories {
@@ -31,8 +31,6 @@ jar {
 }
 sourceCompatibility = 21
 targetCompatibility = 21
-def springfoxVersion = '3.0.0'
-def springfoxUiVersion = '3.0.0'
 repositories {
     mavenCentral()
 }
@@ -44,23 +42,24 @@ dependencies {
     implementation 'joda-time:joda-time:2.3'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
-    implementation("javax.servlet:javax.servlet-api:4.0.1")
-    implementation("org.springframework.boot:spring-boot-starter-web:${springboot_version}")
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springboot_version}")
-    implementation("org.springframework.boot:spring-boot-starter-security:${springboot_version}")
-    implementation 'org.springframework.security:spring-security-web:6.2.3'
-    implementation 'org.springframework.security:spring-security-config:6.2.3'
+    //implementation("javax.servlet:javax.servlet-api:4.0.1")
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation 'org.springframework.security:spring-security-web'
+    implementation 'org.springframework.security:spring-security-config'
     implementation 'io.jsonwebtoken:jjwt:0.12.5'
     implementation 'org.joda:joda-money:1.0.3'
     implementation("com.h2database:h2:1.4.192")
-    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0-M2'
-    testImplementation("org.springframework.boot:spring-boot-starter-test:${springboot_version}")
-    testImplementation("junit:junit:4.13.2")
+    compileOnly 'jakarta.servlet:jakarta.servlet-api'
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
     testImplementation("org.hamcrest:hamcrest-all:1.3")
-    implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.2.4'
+    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation("org.apache.commons:commons-dbcp2:2.9.0")
     testImplementation("org.exparity:hamcrest-date:2.0.0")
     testImplementation 'org.mockito:mockito-core:4.2.0'
+    testImplementation 'io.rest-assured:rest-assured:5.4.0'
+
 }
 
 sonarqube {
@@ -91,8 +90,6 @@ eclipse {
     }
 }
 
-task integrationTest(type: Test, dependsOn: testClasses) {
-    include '**/IntegrationTestSuite.class'
-    //reports.junitXml.destination = "$buildDir/test-results/IntegrationTestSuite"
-    //reports.html.destination = "$buildDir/test-results/IntegrationTestSuite"
+test {
+    useJUnitPlatform()
 }
